--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
   "dependencies": {
     "@actions/core": "^1.2.6",
     "@actions/exec": "^1.0.3"
+  },
+  "engines": {
+    "node": ">=16"
   }
 }
