--- a/action.yml
+++ b/action.yml
@@ -1,9 +1,9 @@
 ---
-name: "gabrielbb/xvfb-action"
+name: xvfb
 description: "Run your headless tests with XVFB"
 branding:
   icon: airplay
-  color: black
+  color: purple
 inputs:
   run:
     description: "Command to execute using xvfb"
