--- a/.github/workflows/local.yml
+++ b/.github/workflows/local.yml
@@ -1,6 +1,11 @@
 ---
 name: local
-"on": [push, pull_request, workflow_dispatch]
+"on":
+  push:
+    branches:
+      - main
+  pull_request:
+  workflow_dispatch:
 
 jobs:
   build:
