--- a/.github/workflows/local.yml
+++ b/.github/workflows/local.yml
@@ -17,6 +17,16 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: Fail if npm install reports dirty
+        run: |
+          npm install --no-bin-links
+          if [[ -n $(git status --porcelain) ]]; then
+            echo "Repo is dirty";
+            git status --porcelain;
+            exit 1;
+          fi
+        shell: bash
+
       - name: Test XVFB
         uses: ./
         with:
