--- a/.github/workflows/local.yml
+++ b/.github/workflows/local.yml
@@ -21,6 +21,7 @@ jobs:
         run: |
           npm install
           npx ncc build index.js
+          cp cleanup.sh dist/
           if [[ -n $(git status --porcelain) ]]; then
             echo "Repo is dirty";
             git status --porcelain;
