--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "xvfb-runner",
+  "name": "run-with-xvfb",
   "version": "1.0.0",
   "description": "Run your tests headlessly",
   "main": "index.js",
