--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Run your tests headlessly",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npx ncc build index.js"
   },
   "keywords": [],
   "author": {
